<resources>
    <string name="home_page">Home</string>
    <string name="map">Map</string>
    <string name="trip">Trip</string>
    <string name="setup">More</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">BaBa</string>
    <string name="comments">Comment</string>
    <string name="about_baba">About baba</string>
    <string name="check_new">Check New Version</string>
    <string name="baba_number_one">BaBa V1.0</string>
    <string name="address_choose">Email Address</string>
    <string name="send">Send</string>
    <string name="more">More</string>
    <string name="exit_system">Sign Out</string>
    <string name="my_info">Messages</string>
    <string name="set_center">Option</string>
    <string name="my_car">Car</string>
    <string name="driver_index">Drive</string>
    <string name="fuel_month">Monthly Fuel</string>
    <string name="cost_month">Monthly Cost</string>
    <string name="mileage_month">Monthly Odo</string>
    <string name="trouble_free_systems">OBD System</string>
    <string name="add_car">Add</string>
    <string name="car_name">Car Name</string>
    <string name="must">Input Car Name</string>
    <string name="car_number">Plate Number</string>
    <string name="car_name_two">Car Name:</string>
    <string name="car_model_two">Car Models:</string>
    <string name="gasoline_label">Gas Type：</string>
    <string name="gasoline_label_two">Gas Type：</string>
    <string name="oil_price">Oil Price:</string>
    <string name="insurance_company">Insurace Co.:</string>
    <string name="insurance_company_two">Insurace Co.:</string>
    <string name="contact_phone">Phone Number：</string>
    <string name="insurance_time">Insurance Time:</string>
    <string name="insurance_number">Insurance No:</string>
    <string name="shop_car">Dealer：</string>
    <string name="shop_time">Buy Time:</string>
    <string name="check_time">Maintain Time:</string>
    <string name="bind_terminal">Bind Device</string>
    <string name="Qr_code_bind_terminal">Please scan QRCode or input SN to bind device.</string>
    <string name="serial_number">SN</string>
    <string name="sim_card_number">SIM</string>
    <string name="buy_terminal">Buy WiCARE Safe</string>
    <string name="skip">Skip</string>
    <string name="terminal_add">Add Device</string>
    <string name="share_experience">Here are we collect and share OBD interface pictures of real vehicle friend, one for all, all for one, if the following temporarily unable to display your corresponding models of pictures, please take photos and share your valuable experience</string>
    <string name="near_icon">close shot picture</string>
    <string name="far_icon">vista picture</string>
    <string name="reward">Please click on the photo to share your valuable experience, such as once use, we will give 5 yuan cash coupon rewards.</string>
    <string name="my_share">I want to share</string>
    <string name="car_brand">Car Brand</string>
    <string name="input_keyword">Please input the keyword</string>
    <string name="share_now">share immediately</string>
    <string name="picture_share">photo sharing</string>
    <string name="information">Information</string>
    <string name="fault_two">Fault</string>
    <string name="alarm">Alert</string>
    <string name="illegal">Violation</string>
    <string name="other">System</string>
    <string name="my_account">Account</string>
    <string name="head_portrait">Photo</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="nickname">Nickname</string>
    <string name="my_email">Email</string>
    <string name="m_sex">Sex</string>
    <string name="birthday">Birthday</string>
    <string name="update_password">Modfiy Password</string>
    <string name="account_bind">binding account</string>
    <string name="input_account">Username</string>
    <string name="input_password">Password</string>
    <string name="bind">binding</string>
    <string name="input_verification_code">Input Verification Code</string>
    <string name="send_verification_code">Already sended Verification Code to your Email below</string>
    <string name="write_verification_code">Pls Input Verification Code</string>
    <string name="input_login_password">Input Password</string>
    <string name="input_login_password_again">Input Password Again</string>
    <string name="verification_code_null">Do not receive verification code?</string>
    <string name="account_password_error">Wrong Password!</string>
    <string name="experience_immediately">Immediate experience!</string>
    <string name="update_nickname">Modify Nickname</string>
    <string name="input_nickname">Pls Input Nickname</string>
    <string name="oil_update">fuel consumption correction</string>
    <string name="oil_update_two">for most models, the system will according to new data on fuel consumption for automatic correction, but if you find your fuel consumption is not very accurate, can through the following two ways to correct the fuel consumption.</string>
    <string name="computer_update">1.the car driving computer, can pass trip to fuel consumption</string>
    <string name="one_update_over">after the end of the first stroke, can enter the schedule interface, input driving trip fuel consumption can be displayed on the computer, so after a few input, the system will automatically to modify fuel consumption.</string>
    <string name="start_update">began to correct</string>
    <string name="two_update">2.the car without driving computer, the modification of two gas to fuel consumption</string>
    <string name="one_oil_over">after fill up the first time, please click on the button below:</string>
    <string name="one_oil">fill up the first time</string>
    <string name="two_oil_over">fill up the second time, please input amount, and click on the button below:</string>
    <string name="oil_amount">please enter the amount to unit:L</string>
    <string name="two_oil">fill up the second time</string>
    <string name="reset_oil_update">reset the refueling modification</string>
    <string name="please_input_phone_email">Please Input Email Address</string>
    <string name="last">Last Step</string>
    <string name="input_info">Your registration will be almost success, please input some basic information</string>
    <string name="nickname_two">Nickname：</string>
    <string name="born">Birth Year：</string>
    <string name="gender">Sex：</string>
    <string name="identity">Identity：</string>
    <string name="no_car">No Car</string>
    <string name="car_owner">Have Car</string>
    <string name="service_providers">Dealer</string>
    <string name="into_system">Enjoy it!</string>
    <string name="feedbacks_and_suggestions">Feedback</string>
    <string name="exit_login">Logout</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="input_password_again">New Password Again</string>
    <string name="car_offline">Your car is offline, cannot set the sensitivity</string>
    <string name="set_up">Setup</string>
    <string name="road_close">live traffic has been closed</string>
    <string name="road_open">live traffic has been opened</string>
    <string name="terminal_use">Pls bind device after adding car</string>
    <string name="closed">Closed</string>
    <string name="sensitivity_set_success">Set Vibration Alarm Sensitivity</string>
    <string name="sensitivity_set_faild">Set Vibration Alarm Sensitivity failed</string>
    <string name="no_result">Not found</string>
    <string name="point"></string>
    <string name="note">Prompt</string>
    <string name="no_update">No Updated</string>
    <string name="no_function">Demo account does not support this feature</string>
    <string name="no_contact">Contact cannot be empty</string>
    <string name="key_validation">Please in AndoridManifest. XML input the correct license Key, and check your network connection is normal!error: </string>
    <string name="key_validation_success">key authentication success</string>
    <string name="notice">Message</string>
    <string name="net_connection">The current network not connection</string>
    <string name="open">Opened</string>
    <string name="clear_all_data">Whether in the remove of the binding to clear all the data terminal at the same time?</string>
    <string name="determine">Ok</string>
    <string name="remove_binding_success">Unbind Ok</string>
    <string name="delete_success">Delete the success</string>
    <string name="add_car_success">Vehicles added successfully</string>
    <string name="add_faild">Add failure</string>
    <string name="car_name_null">Vehicle name cannot be empty</string>
    <string name="car_model_null">Models cannot be empty</string>
    <string name="save_faild">Save failed, please try again</string>
    <string name="move_data">Modified in the terminal and all the data will be the original terminal to the new terminal?</string>
    <string name="near_share_success">Close shot photo sharing success</string>
    <string name="far_share_success">Vista to share success</string>
    <string name="bind_terminal_faild">Bind device failure</string>
    <string name="update_terminal_faild">Modify the end failure</string>
    <string name="serial_number_null">The serial number cannot be empty</string>
    <string name="sim_card_error">SIM format is wrong</string>
    <string name="terminal_binding">Binding Device…</string>
    <string name="terminal_updating">Updating Device…</string>
    <string name="no_serial_number">Serial number was not found</string>
    <string name="haved_terminal">The device has been binded by other users, unable to bind again.</string>
    <string name="serial_number_used">The serial number has been used</string>
    <string name="get_data_faild">Get the data fails, pls try again later</string>
    <string name="picture_share_success">Photo sharing success</string>
    <string name="taking_pictures">taking pictures</string>
    <string name="photo_album">select from the mobile phone photo albums</string>
    <string name="choose_picture">please select upload pictures or photos</string>
    <string name="delete_friend_faild">remove buddy failure</string>
    <string name="add_friend_success">Add success, waiting for someone to confirm!</string>
    <string name="add_friend_faild">Add buddy failure, please try again</string>
    <string name="send_content_null">send content cannot be empty</string>
    <string name="copy_success">copy success</string>
    <string name="notice_picture">[Picture]</string>
    <string name="notice_voice">[Voice]</string>
    <string name="notice_file">[File]</string>
    <string name="notice_position">[Location]</string>
    <string name="add_friend">Add friends</string>
    <string name="sweep">Sweep</string>
    <string name="system_message">System Message</string>
    <string name="car_failure">Car Fault</string>
    <string name="car_alarm">Car Alert</string>
    <string name="man">Male</string>
    <string name="woman">Female</string>
    <string name="sex">Sex</string>
    <string name="file_null">File does not exist</string>
    <string name="server_accept_faild">Connected server failed.</string>
    <string name="account_password">Please input the password</string>
    <string name="next">Next</string>
    <string name="remove_binding">Unbind Device</string>
    <string name="update_terminal">Modify</string>
    <string name="reset_password">Reset Password</string>
    <string name="update">Modify</string>
    <string name="password_error">Wrong password, pls input again.</string>
    <string name="verification_code_error">Verification code error, please input again</string>
    <string name="update_faild">Modify failure.</string>
    <string name="password_different">two input do not match the password, please enter again</string>
    <string name="logining">Logining…</string>
</resources>