<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/ll_main"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_hight"
        android:background="@color/title_back" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/oil_update"
            android:textColor="@color/white"
            android:textSize="@dimen/title" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/title_hight"
            android:layout_height="@dimen/title_hight"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margins"
            android:padding="@dimen/margins"
            android:src="@drawable/nav_back" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/small"
                android:text="@string/oil_update_two"
                android:textSize="@dimen/content" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray_light"
                android:padding="@dimen/margins"
                android:text="@string/computer_update"
                android:textSize="@dimen/content" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/small" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/one_update_over"
                    android:textSize="@dimen/content" />

                <Button
                    android:id="@+id/bt_oil_update"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margins"
                    android:background="@drawable/bg_green"
                    android:text="@string/start_update"
                    android:textColor="@color/white" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray_light"
                android:padding="@dimen/margins"
                android:text="@string/two_update"
                android:textSize="@dimen/content" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:padding="@dimen/small" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/one_oil_over"
                    android:textSize="@dimen/content" />

                <Button
                    android:id="@+id/bt_oil_add_1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margins"
                    android:background="@drawable/bg_green"
                    android:text="@string/one_oil"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margins"
                    android:text="@string/two_oil_over"
                    android:textSize="@dimen/content" />

                <EditText
                    android:id="@+id/et_oil_record"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margins"
                    android:hint="@string/oil_amount"
                    android:inputType="number" />

                <Button
                    android:id="@+id/bt_oil_add_2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margins"
                    android:background="@drawable/bg_green"
                    android:text="@string/two_oil"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/bt_reset"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margins"
                    android:background="@drawable/bg_green"
                    android:text="@string/reset_oil_update"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>