<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/ll_main"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_hight"
        android:background="@color/title_back" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/input_verification_code"
            android:textColor="@color/white"
            android:textSize="@dimen/title" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/title_hight"
            android:layout_height="@dimen/title_hight"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margins"
            android:padding="@dimen/margins"
            android:src="@drawable/nav_back" />
    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/send_verification_code"
        android:textColor="@color/navy"
        android:textSize="@dimen/content" />

    <TextView
        android:id="@+id/tv_account"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/navy"
        android:textSize="@dimen/content" />

    <EditText
        android:id="@+id/et_captcha"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margins"
        android:layout_marginRight="@dimen/margins"
        android:layout_marginTop="30dp"
        android:background="@drawable/et_back"
        android:hint="@string/write_verification_code"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="@color/blue_account"
        android:textSize="@dimen/content" />

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margins"
        android:layout_marginRight="@dimen/margins"
        android:layout_marginTop="10dp"
        android:background="@drawable/et_back"
        android:hint="@string/input_login_password"
        android:inputType="textWebPassword"
        android:padding="10dp"
        android:textColor="@color/blue_account"
        android:textSize="@dimen/content" />

    <EditText
        android:id="@+id/et_pwd_again"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margins"
        android:layout_marginRight="@dimen/margins"
        android:layout_marginTop="10dp"
        android:background="@drawable/et_back"
        android:hint="@string/input_login_password_again"
        android:inputType="textWebPassword"
        android:padding="10dp"
        android:textColor="@color/blue_account"
        android:textSize="@dimen/content" />

    <Button
        android:id="@+id/bt_Submit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margins"
        android:layout_marginRight="@dimen/margins"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_bt_blue"
        android:padding="@dimen/margins"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="@dimen/main" />

    <TextView
        android:id="@+id/tv_send_captcha"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/verification_code_null"
        android:textColor="@color/blue_press"
        android:textSize="@dimen/content"
        android:visibility="gone" />

</LinearLayout>