<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/gray_bg" >

    <RelativeLayout
        android:id="@+id/ll_main"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_hight"
        android:background="@color/title_back" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/last"
            android:textColor="@color/white"
            android:textSize="@dimen/title" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/title_hight"
            android:layout_height="@dimen/title_hight"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margins"
            android:padding="@dimen/margins"
            android:src="@drawable/nav_back" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_main"
        android:orientation="vertical"
        android:padding="@dimen/margins" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margins"
            android:text="@string/input_info"
            android:textColor="@color/navy"
            android:textSize="@dimen/content" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margins"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/nickname_two"
                android:textColor="@color/navy"
                android:textSize="@dimen/main" />

            <EditText
                android:id="@+id/et_cust_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margins"
                android:layout_marginRight="@dimen/margins"
                android:background="@drawable/et_back"
                android:hint="@string/input_nickname"
                android:maxLength="11"
                android:padding="@dimen/margins"
                android:textColor="@color/blue_account"
                android:textSize="@dimen/main" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margins"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/born"
                android:textColor="@color/navy"
                android:textSize="@dimen/main" />

            <Spinner
                android:id="@+id/s_birth"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margins"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textColor="@color/navy"
                android:textSize="@dimen/main" />

            <RadioGroup
                android:id="@+id/rg_sex"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/rb_man"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/man"
                    android:textColor="@color/navy" />

                <RadioButton
                    android:id="@+id/rb_woman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/woman"
                    android:textColor="@color/navy" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margins"
            android:layout_marginTop="@dimen/margins"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/identity"
                android:textColor="@color/navy"
                android:textSize="@dimen/main" />

            <RadioGroup
                android:id="@+id/rg_identity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/rb_no_car"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/no_car"
                    android:textColor="@color/navy" />

                <RadioButton
                    android:id="@+id/rb_car"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_owner"
                    android:textColor="@color/navy" />

                <RadioButton
                    android:id="@+id/rb_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service_providers"
                    android:textColor="@color/navy" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_models"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="车型："
                android:textColor="@color/navy"
                android:textSize="@dimen/main" />

            <TextView
                android:id="@+id/tv_model"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_back"
                android:text="点击选择车型"
                android:textColor="@color/navy"
                android:textSize="@dimen/content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="类型："
                android:textColor="@color/navy"
                android:textSize="@dimen/main" />

            <Spinner
                android:id="@+id/s_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bt_enter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="@dimen/margins"
        android:layout_marginRight="@dimen/margins"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_bt_yellow"
        android:padding="@dimen/margins"
        android:text="@string/into_system"
        android:textColor="@color/white"
        android:textSize="@dimen/bt" />

</RelativeLayout>