<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/ll_main"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_hight"
        android:background="@color/title_back" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/account_bind"
            android:textColor="@color/white"
            android:textSize="@dimen/title" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/title_hight"
            android:layout_height="@dimen/title_hight"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margins"
            android:padding="@dimen/margins"
            android:src="@drawable/nav_back" />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_account"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margins"
        android:layout_marginRight="@dimen/margins"
        android:layout_marginTop="50dp"
        android:background="@drawable/et_back"
        android:hint="@string/input_account"
        android:padding="10dp"
        android:textSize="@dimen/main" />

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margins"
        android:layout_marginRight="@dimen/margins"
        android:layout_marginTop="10dp"
        android:background="@drawable/et_back"
        android:hint="@string/input_password"
        android:inputType="textWebPassword"
        android:padding="10dp"
        android:textSize="@dimen/main" />

    <Button
        android:id="@+id/bt_bind"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margins"
        android:layout_marginRight="@dimen/margins"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_bt_blue"
        android:padding="@dimen/margins"
        android:text="@string/bind"
        android:textColor="@color/white"
        android:textSize="@dimen/main" />

</LinearLayout>